fix: add ecair api key

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ ECAIR_API_URL=https://api.ecair.eco
 APP_BASE_URL=http://localhost:3000
 
 SESSION_SECRET=change-me-in-production
+
+ECAIR_API_KEY=ecair_pk_xxx
